plugins {


    id 'java'
    id 'org.springframework.boot' version '2.6.+'
    id 'io.spring.dependency-management' version '1.1.0'
    id 'org.graalvm.buildtools.native' version '0.9.18'
    id "org.sonarqube" version "3.5.0.2730"
    id'jacoco'
}
jacocoTestReport{
    reports {
        xml.enabled true
    }
}

group = 'pets.example'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {

    implementation 'javax.validation:validation-api:2.0.1.Final'
    implementation 'org.glassfish:jakarta.el:3.0.4'
    implementation 'org.hibernate.validator:hibernate-validator:6.2.0.Final'
    implementation 'org.springframework.boot:spring-boot-starter-validation'


    implementation 'mysql:mysql-connector-java:8.0.28'
    implementation 'com.microsoft.sqlserver:mssql-jdbc:9.4.1.jre8'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    testImplementation 'junit:junit:4.13.1'


    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
//    implementation'org.flywaydb.enterprise:flyway-core:9.0.0'

//    implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
//    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.2'
//    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.2'


}

tasks.named('test') {
    useJUnitPlatform()
}
